--- a/app/src/main/res/layout/fragment_bot_nav__settings_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__settings_fragment__vendor.xml
@@ -29,13 +29,13 @@
                     android:textSize="23sp"/>
                 <ImageView
                     android:id="@+id/homescreen_notification"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="10dp"
                     android:layout_centerVertical="true"
                     android:background="@drawable/home_toolbar_notification"
-                    android:backgroundTint="@color/colorHint" />
+      />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
