--- a/app/src/main/res/layout/activity_add_jobs__vendor.xml
+++ b/app/src/main/res/layout/activity_add_jobs__vendor.xml
@@ -35,7 +35,17 @@
                     android:text="Add Jobs"
 
                     android:layout_centerInParent="true"/>
+                <ImageView
+                    android:id="@+id/homescreen_notification"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
 
+                    android:background="@drawable/home_toolbar_notification"
+
+                    />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
 
