--- a/app/src/main/res/layout/activity_discount_details.xml
+++ b/app/src/main/res/layout/activity_discount_details.xml
@@ -47,6 +47,17 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="22sp"
                 android:gravity="center"/>
+                <ImageView
+                    android:id="@+id/homescreen_notification"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
+
+                    android:background="@drawable/home_toolbar_notification"
+                    android:backgroundTint="@color/colorWhite"
+                    />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
 
