--- a/app/src/main/res/layout/activity_discount_details__vendor.xml
+++ b/app/src/main/res/layout/activity_discount_details__vendor.xml
@@ -10,7 +10,6 @@
         android:id="@+id/sdlkj"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp"
         >
 
         <android.support.v7.widget.Toolbar
@@ -36,6 +35,17 @@
                     android:layout_centerInParent="true"
                    android:textColor="@color/colorHintss"
                     android:textSize="20sp"/>
+                <ImageView
+                    android:id="@+id/homescreen_notification"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
+
+                    android:background="@drawable/home_toolbar_notification"
+
+                    />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
 
