--- a/app/src/main/res/layout/activity_settings__account.xml
+++ b/app/src/main/res/layout/activity_settings__account.xml
@@ -25,7 +25,7 @@
                     android:layout_height="wrap_content"
                     android:text="Account"
                     android:layout_centerHorizontal="true"
-                    android:textColor="@color/colorHint"
+                    android:textColor="@color/colorHintss"
                     android:textSize="23sp"/>
                 <ImageView
                     android:id="@+id/set_account_back"
@@ -35,6 +35,17 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
                    />
+                <ImageView
+                    android:id="@+id/homescreen_notification"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_centerVertical="true"
+
+                    android:background="@drawable/home_toolbar_notification"
+
+                    />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
