--- a/app/src/main/res/layout/content_discount_details__vendor.xml
+++ b/app/src/main/res/layout/content_discount_details__vendor.xml
@@ -14,27 +14,30 @@
             android:orientation="vertical" >
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
-
-                android:background="@drawable/kfc"
-                android:layout_weight="2">
+                android:layout_height="180dp"
+>
+                <ImageView
+                    android:id="@+id/v_disc_det_image"
+                    android:layout_width="500dp"
+                    android:layout_height="180dp"
+                    android:src="@drawable/rounded_two"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
+                    android:layout_marginBottom="6dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:id="@+id/linearLayout">
-                    <com.makeramen.roundedimageview.RoundedImageView
-                        android:id="@+id/roundedImageView1"
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/v_disc_det_det_logo"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_margin="8dp"
                         android:src="@drawable/rounded"
-
-                        app:riv_border_color="@color/colorPrimary"
-                        app:riv_border_width="2dip"
-                        app:riv_oval="true"/>
+                        android:background="@drawable/rounded"
+                        app:civ_border_width="2dp"
+                        app:civ_border_color="@color/colorPrimary"/>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
