--- a/app/src/main/res/layout/content_jobs_user.xml
+++ b/app/src/main/res/layout/content_jobs_user.xml
@@ -37,14 +37,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:padding="10dp"
+
                 android:weightSum="3">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/IV_logo_jobuser"
                     android:layout_width="70dp"
-                    android:layout_height="120dp"
+                    android:layout_height="70dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="12dp"
+
+                    android:background="@drawable/rounded"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="@color/colorPrimary"
                     android:layout_weight=".0"
                     android:src="@drawable/rounded"/>
 
@@ -75,6 +80,7 @@
                         android:layout_marginLeft="10dp"
                         android:gravity="start"
                         android:text="Producer"
+                        android:layout_marginTop="3dp"
                         android:textColor="@color/colorHint"
                         android:textSize="16sp" />
 
@@ -82,13 +88,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:weightSum="2"
+                        android:padding="15dp"
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/fag_jobs_desc_user"
                             android:layout_width="200dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
-                            android:layout_marginLeft="10dp"
+                            android:paddingRight="10dp"
                             android:layout_weight="1"
                             android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                             android:gravity="start"
@@ -99,7 +106,6 @@
                     </LinearLayout>
 
                 </LinearLayout>
-
             </LinearLayout>
 
 
