--- a/app/src/main/res/layout/content_jobs_vendor_card.xml
+++ b/app/src/main/res/layout/content_jobs_vendor_card.xml
@@ -27,24 +27,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="8dp"
-
+      android:padding="10dp"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:layout_marginBottom="10dp"
+                android:padding="10dp"
                 android:weightSum="3">
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/IV_logo_job_vendor"
                     android:layout_width="70dp"
-                    android:layout_height="120dp"
+                    android:layout_height="70dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="12dp"
+                    android:background="@drawable/rounded"
+                    app:civ_border_width="2dp"
+                    app:civ_border_color="@color/colorPrimary"
+
                     android:layout_weight=".0"
                     android:src="@drawable/rounded"/>
 
@@ -89,6 +91,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="start"
                             android:layout_marginLeft="10dp"
+                            android:paddingRight="10dp"
                             android:layout_weight="1"
                             android:drawableEnd="@drawable/ic_navigate_next_black_24dp"
                             android:gravity="start"
