--- a/app/src/main/res/layout/fragment_bot_nav__discounts.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__discounts.xml
@@ -27,32 +27,47 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
+                android:layout_alignParentStart="true"
                 android:background="@drawable/home_filter"
                 android:backgroundTint="@color/colorHintss" />
+
             <EditText
                 android:id="@+id/homescreen_search"
-                android:layout_width="248dp"
+                android:layout_width="230dp"
                 android:layout_height="wrap_content"
-                android:gravity="start"
-                android:layout_centerHorizontal="true"
-                android:hint="Search"
-                android:textColor="@color/colorBlack"
-                android:padding="4dp"
-                android:textColorHint="@color/colorHints"
-                android:drawableLeft="@drawable/ic_search_black_24dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="16dp"
+                android:layout_toEndOf="@+id/homescreen_filter"
                 android:background="@drawable/editext_lightborder_unsel"
-                android:backgroundTint="@color/colorHintss"/>
+                android:backgroundTint="@color/colorHintss"
+                android:drawableLeft="@drawable/ic_search_black_24dp"
+                android:gravity="start"
+                android:hint="Search"
+                android:padding="4dp"
+                android:textColor="@color/colorBlack"
+                android:textColorHint="@color/colorHints" />
+
+            <ImageView
+                android:id="@+id/homescreen_nav"
+                android:layout_width="wrap_content"
+                android:layout_height="20dp"
+                android:layout_alignTop="@+id/homescreen_notification"
+                android:layout_marginStart="9dp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@+id/homescreen_search"
+                android:background="@drawable/ic_near_me_black_24dp"
+                android:backgroundTint="@color/colorHintss" />
 
             <ImageView
                 android:id="@+id/homescreen_notification"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="10dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:layout_centerVertical="true"
-
+                android:layout_alignParentEnd="true"
+                android:layout_alignTop="@+id/homescreen_filter"
+                android:layout_marginEnd="7dp"
                 android:background="@drawable/home_toolbar_notification"
-                android:backgroundTint="@color/colorHint" />
+                />
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
