--- a/app/src/main/res/layout/fragment_bot_nav__jobs_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__jobs_fragment__vendor.xml
@@ -9,7 +9,6 @@
         android:id="@+id/appbar_homescreen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
@@ -22,50 +21,35 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/homescreen_filter"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/home_filter"
-                    android:backgroundTint="@color/colorHintss" />
-
-                <EditText
-                    android:id="@+id/homescreen_jobs_search"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginStart="17dp"
-                    android:layout_toEndOf="@+id/homescreen_filter"
-                    android:background="@drawable/editext_lightborder_unsel"
-                    android:drawableLeft="@drawable/ic_search_black_24dp"
-                    android:gravity="start"
-                    android:hint="Search"
-                    android:padding="4dp"
-                    android:backgroundTint="@color/colorHintss"
-                    android:textColor="@color/colorBlack"
-                    android:textColorHint="@color/colorHints" />
+                    android:text="Jobs"
+                    android:layout_centerInParent="true"
+                    android:textSize="22sp"
+                    android:textColor="@color/colorHint"/>
                 <ImageView
                     android:id="@+id/homescreen_addjobs"
                     android:layout_width="wrap_content"
-                    android:layout_height="25dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="40dp"
-                    android:layout_centerVertical="true"
+                    android:layout_height="30dp"
 
-                    android:background="@drawable/ic_add_black_24dp"
-                    />
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="11dp"
+                    android:layout_toStartOf="@+id/homescreen_notification"
+                    android:background="@drawable/ic_add_black_24dp" />
+
                 <ImageView
                     android:id="@+id/homescreen_notification"
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_centerVertical="true"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
 
-                    android:background="@drawable/home_toolbar_notification"
-                    android:backgroundTint="@color/colorHint" />
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="13dp"
+                    android:background="@drawable/home_toolbar_notification" />
+
+
+
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
