--- a/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -56,5 +56,14 @@
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
+    <ImageView
+        android:id="@+id/IV_noitem_disc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/appbar_homescreen"
 
-</FrameLayout>
+        android:src="@drawable/event_noitems_image"
+        />
+
+</RelativeLayout>
