--- a/app/src/main/res/layout/fragment_bot_nav__jobs.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__jobs.xml
@@ -90,4 +90,13 @@
         android:padding="3dp"
         android:layout_margin="6dp"
         />
+    <ImageView
+        android:id="@+id/IV_noitem_jobs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_below="@+id/RV_jobs_user"
+android:visibility="invisible"
+        android:src="@drawable/job_noitems_image"
+        />
 </RelativeLayout>
