--- a/app/src/main/res/layout/fragment_bot_nav__jobs_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__jobs_fragment__vendor.xml
@@ -65,4 +65,13 @@
         android:layout_marginBottom="60dp"
         android:layout_below="@+id/appbar_homescreen"
         android:layout_height="match_parent"/>
+    <ImageView
+        android:id="@+id/IV_noitem_jobs"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="invisible"
+        android:layout_below="@+id/appbar_homescreen"
+        android:src="@drawable/job_noitems_image"
+        />
 </RelativeLayout>
