--- a/app/src/main/res/layout/content_discountdesc_user.xml
+++ b/app/src/main/res/layout/content_discountdesc_user.xml
@@ -29,9 +29,9 @@
                 android:layout_weight="3">
                 <ImageView
                     android:id="@+id/disc_det_image"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/kfc"/>
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                 />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
