--- a/app/src/main/res/layout/activity_settings__profile__vendor.xml
+++ b/app/src/main/res/layout/activity_settings__profile__vendor.xml
@@ -92,6 +92,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -196,6 +201,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -219,6 +229,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -243,6 +258,11 @@
                     android:layout_marginBottom="10dp"
                     android:textSize="17sp"/>
             </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/colorHints"
+                android:layout_marginTop="10dp"/>
             <Button
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
