--- a/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
+++ b/app/src/main/res/layout/fragment_bot_nav__events_fragment__vendor.xml
@@ -23,36 +23,35 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/homescreen_filter"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/home_filter"
-                    android:backgroundTint="@color/colorHintss" />
-                <EditText
-                    android:id="@+id/homescreen_search"
-                    android:layout_width="248dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="start"
-                    android:layout_centerHorizontal="true"
-                    android:hint="Search"
-                    android:padding="4dp"
-                    android:textColorHint="@color/colorHints"
-                    android:drawableLeft="@drawable/ic_search_black_24dp"
-                    android:background="@drawable/editext_lightborder_unsel"
-                    android:backgroundTint="@color/colorHintss"/>
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="65dp"
+                    android:layout_toStartOf="@+id/homescreen_adddiscount"
+                    android:text="Events"
+                    android:textColor="@color/colorHint"
+                    android:textSize="22sp" />
+
+                <ImageView
+                    android:id="@+id/homescreen_addevent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
+
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="11dp"
+                    android:layout_toStartOf="@+id/homescreen_notification"
+                    android:background="@drawable/ic_add_black_24dp" />
 
                 <ImageView
                     android:id="@+id/homescreen_notification"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginRight="10dp"
-                    android:layout_centerVertical="true"
 
-                    android:background="@drawable/home_toolbar_notification"
-                    />
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginEnd="13dp"
+                    android:background="@drawable/home_toolbar_notification" />
             </RelativeLayout>
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
